# mcl

./: .gitignore  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  TODO  VERSION  acinclude.m4  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  configure.ac.in  setversion
doc/: Makefile.am  Makefile.in  TODO  clm.1  clm.azm  clm.html  clm.ps  clmclose.1  clmclose.azm  clmclose.html  clmclose.ps  clmdist.1  clmdist.azm  clmdist.html  clmdist.ps  clmformat.1  clmformat.azm  clmformat.html  clmformat.ps  clmimac.1  clmimac.azm  clmimac.html  clmimac.ps  clminfo.1  clminfo.azm  clminfo.html  clminfo.ps  clmmate.1  clmmate.azm  clmmate.html  clmmate.ps  clmmeet.1  clmmeet.azm  clmmeet.html  clmmeet.ps  clmorder.1  clmorder.azm  clmorder.html  clmorder.ps  clmprotocols.5  (+123 more)
graphs/: Makefile.am  Makefile.in  data.tab  falkner.mci  falkner.ps  fznyy.mci  lattice.mci  small.mci  small.ps  small.tab
img/: Makefile.in
include/: Makefile.in  include.am
scripts/: Makefile.am  Makefile.in  clxcoarse  clxdo  docme  mcxplotlines.R  minimcl  mlm-quilt  tree3.pl
src/: Makefile.am  Makefile.in  README
src/alien/: Makefile.in
src/alien/oxygen/: Makefile.in
src/alien/oxygen/doc/: Makefile.in  mclblastline.1  mclblastline.azm  mclblastline.html  mclblastline.ps  mcxdeblast.1  mcxdeblast.azm  mcxdeblast.html  mcxdeblast.ps
src/alien/oxygen/src/: Makefile.in  mclblastline  mcxdeblast
src/clew/: Makefile.am  Makefile.in  cat.c  cat.h  claw.c  clm.c  clm.h  scan.c
src/contrib/: Makefile.am  Makefile.in
src/contrib/tribe/: Makefile.am  Makefile.in  tribe-families  tribe-matrix.c  tribe-matrix.h  tribe-parse  tribemcl
src/gryphon/: Makefile.in  path.c  path.h
src/impala/: Makefile.am  Makefile.in  app.c  app.h  cat.c  cat.h  compose.c  compose.h  iface.c  iface.h  io.c  io.h  ivp.c  ivp.h  ivptypes.h  matrix.c  matrix.h  pval.c  pval.h  scan.c  scan.h  stream.c  stream.h  tab.c  tab.h  vector.c  vector.h  version.c  version.h
src/mcl/: Makefile.am  Makefile.in  alg.c  alg.h  clm.c  clm.h  dpsd.c  dpsd.h  expand.c  expand.h  inflate.c  inflate.h  interpret.c  interpret.h  proc.c  proc.h  procinit.c  procinit.h  shadow.c  transform.c
src/shcl/: Makefile.am  Makefile.in  clm.c  clmadjust.c  clmclose.c  clmdag.c  clmdist.c  clmformat.c  clmformat.zmm  clmformat.zmm.h  clmframe.c  clmimac.c  clminfo.c  clmmate.c  clmmeet.c  clmorder.c  clmorder.h  clmps.c  clmresidue.c  clmresidue.h  mclpipeline  report.c  report.h
src/shmcl/: Makefile.am  Makefile.in  TODO  mcl.c  mclcm.c
src/shmcx/: Makefile.am  Makefile.in  TODO  glob.c  glob.h  mcx.c  ops.c  ops.h  stack.c  stack.h  util.c  util.h
src/shmcxquery/: Makefile.in  TODO  mcxquery.c
src/shmx/: Makefile.am  Makefile.in  mcx.c  mcx.h  mcxalter.c  mcxarray.c  mcxassemble.c  mcxclcf.c  mcxcollect.c  mcxconvert.c  mcxdiameter.c  mcxdump.c  mcxerdos.c  mcxload.c  mcxmap.c  mcxminusmeet.c  mcxmm.c  mcxq.c  mcxq.h  mcxquery.c  mcxrand.c  mcxsubs.c  mcxtab.c  mcxtest.c
src/taurus/: Makefile.am  Makefile.in  README  ilist.c  ilist.h  la.c  la.h  parse.c  parse.h  perm.c  perm.h
testing/: Makefile.am  Makefile.in
testing/blast/: Makefile.am  Makefile.in
testing/setops/: Makefile.in
testing/stream/: Makefile.am  Makefile.in  abc-test.sh
util/: Makefile.am  Makefile.in  alloc.c  alloc.h  array.c  array.h  compile.h  ding.c  ding.h  duck.c  duck.h  equate.c  equate.h  err.c  err.h  gralloc.c  gralloc.h  hash.c  hash.h  heap.c  heap.h  inttypes.h  io.c  io.h  let.c  let.h  list.c  list.h  minmax.h  opt.c  opt.h  rand.c  rand.h  ting.c  ting.h  tok.c  tok.h  tr.c  tr.h  types.c  (+1 more)
