## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.1 2004/08/18 08:20:41 flux Exp $

exampledir = $(datadir)/doc/$(PACKAGE)/examples

example_DATA = falkner.mci proteins.mci matula.mci \
                  seven.mci small.mci small.png small.ps\
                  data.raw data.hdr data.tab small.tab fznyy.tab fznyy.mci small64.mci

EXTRA_DIST = $(example_DATA)

