## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.4 2005/07/12 10:32:06 flux Exp $

exampledir = $(datadir)/doc/$(PACKAGE)/examples

example_DATA = falkner.mci falkner.ps \
   proteins.mci matula.mci lattice.mci seven.mci \
   small.mci small.map small.png small.ps small.tab fznyy.tab fznyy.mci small64.mci \
   tiny-min.mci tiny-nil.mci tiny-nilnine.mci tiny-ninenil.mci tiny-one.mci tiny-zero.mci \
   data.raw data.hdr data.tab data.abc.raw data.abc.hdr data.abc.map

EXTRA_DIST = $(example_DATA)

