## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.21 2004/06/23 17:37:52 flux Exp $

include $(top_srcdir)/include/include.am

bin_PROGRAMS = mcxconvert mcxsubs mcxmap mcxassemble mcxarray mcxdump
noinst_PROGRAMS = mcxtest

mcxassemble_SOURCES = mcxassemble.c
mcxconvert_SOURCES = mcxconvert.c
mcxsubs_SOURCES = mcxsubs.c
mcxmap_SOURCES = mcxmap.c
mcxdump_SOURCES = mcxdump.c
mcxtest_SOURCES = mcxtest.c
mcxarray_SOURCES = mcxarray.c

