## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.4 2002/04/22 16:13:05 joostvb Exp $

# use noinst_PROGRAMS ?
bin_PROGRAMS = tribe-matrix
tribe_matrix_SOURCES = tribe-matrix.c

bin_SCRIPTS = tribe-families tribemcl tribe-parse

EXTRA_DIST = tribe-matrix.h $(bin_SCRIPTS)
